# webview_juce_plugin_choc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
WebView/: gain_view.html
